cmake_minimum_required(VERSION 3.16)

project(ArrayExamples)

include_directories(include)
add_executable(NumIslands num_islands.cpp)
target_compile_options(NumIslands PRIVATE -g -O3 -Werror -Wall)
add_executable(UniqueIslands unique_islands.cpp)
target_compile_options(UniqueIslands PRIVATE -g -O3 -Werror -Wall)
add_executable(Roman2Integer roman2integer.cpp)
target_compile_options(Roman2Integer PRIVATE -g -O3 -Werror -Wall)
add_executable(CombinationSum1 combination_sum_infinite.cpp)
target_compile_options(CombinationSum1 PRIVATE -g -O3 -Werror -Wall)
add_executable(CombinationSum2 combination_sum_array_dup.cpp)
target_compile_options(CombinationSum2 PRIVATE -g -O3 -Werror -Wall)
add_executable(CombinationSum3 combination_sum_kpath.cpp)
target_compile_options(CombinationSum3 PRIVATE -g -O3 -Werror -Wall)
add_executable(MergeIntervals merge_intervals.cpp)
target_compile_options(MergeIntervals PRIVATE -g -O3 -Werror -Wall)
add_executable(MedianSortedArrays median_sorted_logm.cpp) 
target_compile_options(MedianSortedArrays PRIVATE -g -O3 -Werror -Wall)
add_executable(PartitionKSubsets partition_ksubset_sum.cpp) 
target_compile_options(PartitionKSubsets PRIVATE -g -O3 -Werror -Wall)
add_executable(PartitionEqualSubsets partition_equalsubset_sum.cpp)
target_compile_features(PartitionEqualSubsets PRIVATE cxx_std_17)
target_compile_options(PartitionEqualSubsets PRIVATE -g -O3 -Werror -Wall)
